fix: add overflow to main elements

--- a/src/pages/HomePage/ui/home-page.scss
+++ b/src/pages/HomePage/ui/home-page.scss
@@ -3,4 +3,5 @@
 .main {
   max-width: $desktop-md;
   margin: 0 auto;
+  overflow-x: hidden;
 }
