--- a/src/widgets/AppFooter/ui/app-footer.scss
+++ b/src/widgets/AppFooter/ui/app-footer.scss
@@ -3,6 +3,7 @@
 .footer {
   background-color: $dark;
   color: $white;
+  overflow-x: hidden;
 }
 
 .footer__container {
