--- a/src/widgets/AppHeader/ui/app-header.scss
+++ b/src/widgets/AppHeader/ui/app-header.scss
@@ -5,6 +5,7 @@
   top: 0;
   z-index: 4;
   transition: transform 0.5s ease;
+  overflow-x: hidden;
 }
 
 .header__container {
